--- a/chatbot_web/templates/homepage.html
+++ b/chatbot_web/templates/homepage.html
@@ -3,12 +3,21 @@
 {% block content %}
     <div class="container">
         <div class="text-area">
-            <h1>hello</h1>
+            {% if dashboard %}
+            {% for dash in dashboard %}
+        
+            <h1>{{dash}}</h1>
+            
+            {% endfor %}
+
+            {% else %}
+            <h1></h1>
+            {% endif %}
         </div>
     
         <div class="input-area">
-            <form action="">
-                <input type="text">
+            <form action="/" method="POST">
+                <input type="text" name="question" placeholder="Send a message.">
                 <button type="submit">Send</button>
             </form>
         </div>
