Add js to listen form submit

--- a/chatbot_web/templates/base.html
+++ b/chatbot_web/templates/base.html
@@ -15,5 +15,8 @@
 <body>
     {% block content %}
     {% endblock content %}
+  
+  <script href="{{url_for('static',filename='main.js')}}"> </script>
 </body>
+
 </html>
