--- a/chatbot_web/templates/base.html
+++ b/chatbot_web/templates/base.html
@@ -10,6 +10,9 @@
   <!-- CSS -->
   <link rel="stylesheet" href="{{url_for('static',filename='main.css')}}">
 
+  <!-- JavaScript -->
+  <script src="main.js"></script>
+
 </head>
 
 <body>
